syntax = "proto3";

package post;

service Post{
 rpc create_post(PostRequest) returns (PostResponse){}
 rpc get_post_by_id(GetPostByIdRequest) returns (PostResponse){}
};

message GetPostByIdRequest{
    string post_id = 1;
}

message PostRequest{
    string user_id = 1;
    string username = 2 ;
    string title = 3;
    string content = 4;
};

message PostResponse{
    string post_id = 1;
    string user_id = 2;
    string username = 3;
    string title = 4;
    string content = 5;
}   

